# cpp-nsec-auditor

./: .gitignore  README.md  install_hooks.py
cicd/: JenkinsFile  JenkinsFile_sample
core-engine/: CMakeLists.txt  TODO.txt
core-engine/include/nsec/core/: ISecurityRule.h  RuleDefinitions.h  RuleEngine.h
core-engine/include/nsec/models/: Issue.h  Report.h
core-engine/include/nsec/rules/: BannedFunctionRule.h  ComplexityRule.h  NestingDepthRule.h
core-engine/include/nsec/ui/: MonitorUI.h
core-engine/include/nsec/utils/: Logger.h
core-engine/src/: main.cpp  pch.h
core-engine/src/core/: RuleEngine.cpp
core-engine/src/models/: Issue.cpp  Report.cpp
core-engine/src/rules/: BannedFunctionRule.cpp  ComplexityRule.cpp  NestingDepthRule.cpp
core-engine/src/ui/: MonitorUI.cpp
core-engine/src/utils/: Logger.cpp
dashboard-ui/: TODO.txt  app.py
dashboard-ui/templates/: dashboard.html
git-hooks/: pre-commit
jenkins-library/vars/: nsecAudit.groovy
reports/: sample_report_20260503_104526.json  sample_report_20260503_104731.json  sample_report_20260503_110015.json  sample_report_20260503_110130.json  sample_report_20260503_110418.json  sample_report_20260503_113222.json  sample_report_20260503_121758.json  sample_report_20260503_123516.json  sample_report_20260503_162107.json
samples/: nesting_test.cpp  vulnerable_test.cpp
scripts/: TODO.txt  nsec_wrapper.py
